fix(avo-2046): align title of collection with radiobutton

--- a/src/assignment/modals/AddItemsModals.scss
+++ b/src/assignment/modals/AddItemsModals.scss
@@ -22,6 +22,11 @@
 				padding-right: 3.2rem;
 			}
 		}
+
+		.c-heading {
+			font-size: 1.6rem;
+			margin: 3px 0 0;
+		}
 	}
 
 	.c-thumbnail {
